--- a/Tutorial Game/index.html
+++ b/Tutorial Game/index.html
@@ -26,13 +26,14 @@
     };
 var platforms;
 var game = new Phaser.Game(config);
+var player;
 
 function preload ()
 {
   this.load.image('snow', 'assets/snowbackground.png');
   this.load.image('platform', 'assets/platform.jpg');
   this.load.image('fire', 'assets/fire.png');
-  this.load.image('player', 'assets/player.png', );
+  this.load.spritesheet('player', 'assets/dude.png', {frameWidth: 32, frameHeight: 40});
 }
 
 function create ()
@@ -40,16 +41,67 @@ function create ()
   this.add.image(400, 300, 'snow');
   this.add.image(100, 300, 'platform');
   this.add.image(200, 200, 'fire');
-  this.add.image(400, 300, 'player');
+  player = this.physics.add.sprite(100, 450, 'player');
+
+player.setBounce(0.2);
+player.setCollideWorldBounds(true);
+player.body.setGravityY(300)
+
+this.anims.create({
+    key: 'left',
+    frames: this.anims.generateFrameNumbers('player', { start: 0, end: 3 }),
+    frameRate: 10,
+    repeat: -1
+});
+
+this.anims.create({
+    key: 'turn',
+    frames: [ { key: 'player', frame: 4 } ],
+    frameRate: 20
+});
+
+this.anims.create({
+    key: 'right',
+    frames: this.anims.generateFrameNumbers('player', { start: 5, end: 8 }),
+    frameRate: 10,
+    repeat: -1
+});
+
 
   platforms = this.physics.add.staticGroup();
   platforms.create(260, 600, 'platform').setScale(2).refreshBody();
   platforms.create(500, 430, 'platform');
   platforms.create(670, 220, 'platform');
+
+this.physics.add.collider(player, platforms);
 }
 
 function update ()
 {
+  cursors = this.input.keyboard.createCursorKeys();
+  if (cursors.left.isDown)
+    {
+        player.setVelocityX(-160);
+
+        player.anims.play('left', true);
+    }
+    else if (cursors.right.isDown)
+    {
+        player.setVelocityX(160);
+
+        player.anims.play('right', true);
+    }
+    else
+    {
+        player.setVelocityX(0);
+
+        player.anims.play('turn');
+    }
+
+    if (cursors.up.isDown && player.body.touching.down)
+    {
+        player.setVelocityY(-330);
+}
 }
 
 //python -m SimpleHTTPServer 3000
