--- a/Tutorial Game/index.html
+++ b/Tutorial Game/index.html
@@ -27,6 +27,15 @@
 var platforms;
 var game = new Phaser.Game(config);
 var player;
+var score = 0;
+var scoreText;
+
+function collectStar (player, star)
+{
+    star.disableBody(true, true);
+    score += 10;
+    scoreText.setText('Score: ' + score);
+}
 
 function preload ()
 {
@@ -67,7 +76,6 @@ this.anims.create({
     repeat: -1
 });
 
-
   platforms = this.physics.add.staticGroup();
   platforms.create(260, 600, 'platform').setScale(2).refreshBody();
   platforms.create(500, 430, 'platform');
@@ -75,6 +83,20 @@ this.anims.create({
 
 this.physics.add.collider(player, platforms);
 }
+stars = this.physics.add.group({
+    key: 'star',
+    repeat: 11,
+    setXY: { x: 12, y: 0, stepX: 70 }
+});
+
+stars.children.iterate(function (child) {
+
+    child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
+    child.setScale(.2,.2);
+});
+this.physics.add.collider(stars, platforms);
+this.physics.add.overlap(player, stars, collectStar, null, this);
+scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 
 function update ()
 {
