--- a/Tutorial Game/index.html
+++ b/Tutorial Game/index.html
@@ -29,6 +29,7 @@ var game = new Phaser.Game(config);
 var player;
 var score = 0;
 var scoreText;
+var bombs;
 
 function collectStar (player, star)
 {
@@ -41,15 +42,53 @@ function preload ()
 {
   this.load.image('snow', 'assets/snowbackground.png');
   this.load.image('platform', 'assets/platform.jpg');
-  this.load.image('fire', 'assets/fire.png');
+  // this.load.image('fire', 'assets/fire.png');
+  this.load.image('star', 'assets/star.png');
+  this.load.image('bomb', 'assets/bomb.png');
   this.load.spritesheet('player', 'assets/dude.png', {frameWidth: 32, frameHeight: 40});
+}
+
+function collectStar (player, star)
+{
+    star.disableBody(true, true);
+
+    score += 10;
+    scoreText.setText('Score: ' + score);
+
+    if (stars.countActive(true) === 0)
+    {
+        stars.children.iterate(function (child) {
+
+            child.enableBody(true, child.x, 0, true, true);
+
+        });
+
+        var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
+
+        var bomb = bombs.create(x, 16, 'bomb');
+        bomb.setBounce(1);
+        bomb.setCollideWorldBounds(true);
+        bomb.setVelocity(Phaser.Math.Between(-200, 200), 20);
+
+    }
+}
+
+function hitBomb (player, bomb)
+{
+   this.physics.pause();
+
+   player.setTint(0xff0000);
+
+   player.anims.play('turn');
+
+   gameOver = true;
 }
 
 function create ()
 {
   this.add.image(400, 300, 'snow');
   this.add.image(100, 300, 'platform');
-  this.add.image(200, 200, 'fire');
+  // this.add.image(200, 200, 'fire');
   player = this.physics.add.sprite(100, 450, 'player');
 
 player.setBounce(0.2);
@@ -77,12 +116,15 @@ this.anims.create({
 });
 
   platforms = this.physics.add.staticGroup();
-  platforms.create(260, 600, 'platform').setScale(2).refreshBody();
+  platforms.create(150, 590, 'platform').setScale(1.5).refreshBody();
+  platforms.create(100, 300, 'platform');
   platforms.create(500, 430, 'platform');
-  platforms.create(670, 220, 'platform');
+  platforms.create(695, 220, 'platform');
+  platforms.create(651, 570, 'platform');
+  platforms.create(428, 570, 'platform');
+  platforms.create(874, 570, 'platform');
 
 this.physics.add.collider(player, platforms);
-}
 stars = this.physics.add.group({
     key: 'star',
     repeat: 11,
@@ -92,11 +134,19 @@ stars = this.physics.add.group({
 stars.children.iterate(function (child) {
 
     child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
-    child.setScale(.2,.2);
+    child.setScale(.85,.85);
 });
 this.physics.add.collider(stars, platforms);
 this.physics.add.overlap(player, stars, collectStar, null, this);
 scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+
+bombs = this.physics.add.group();
+
+this.physics.add.collider(bombs, platforms);
+
+this.physics.add.collider(player, bombs, hitBomb, null, this);
+}
+
 
 function update ()
 {
@@ -122,7 +172,7 @@ function update ()
 
     if (cursors.up.isDown && player.body.touching.down)
     {
-        player.setVelocityY(-330);
+        player.setVelocityY(-530);
 }
 }
 
